@@ -1,3 +1,9 @@
+2010-01-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	Implement binary numbers parsing.
+	* gdb.base/printcmds.exp (test_integer_literals_accepted)
+	(test_integer_literals_rejected): New binary tests.
+
 2010-01-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* gdb.cell/configure: Regenerate.
